--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     .bwa {
 
         display: grid;
+        justify-content: center;
         /* height: 20px;
         padding: 8px 8px 8px 40px;
         margin-bottom: 100px; */
