--- a/style.css
+++ b/style.css
@@ -7,13 +7,14 @@
 .bwa {
     display: flex;
    
-    background-color: blueviolet;
+    background-color: rgba(0, 128, 128, 0.524);
     text-align: center;
-    color: white;
+    
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     word-spacing: 0.3rem;
     letter-spacing: 0.1rem;
+    color: rgb(248, 248, 248);
     
 }
 
@@ -51,8 +52,8 @@
 .menu {
     text-align: center;
     margin-top: 20px;
-    background-color: purple;
-    color: white;
+    background-color: ghostwhite;
+    color: rgb(22, 4, 4);
     margin-bottom: 20px;
 }
 
@@ -62,18 +63,22 @@
    grid-template-rows: 120px 120px 80px 40px;
 
    grid-column-gap: 10px;
-   background-color: slateblue;
+   background-color: rgb(255, 255, 255);
    grid-row-gap: 10px;
  
 }
 
 .grid-container > div {
-    background-color: yellow;
-    border: 1px solid black;
+    background-color: rgb(245, 245, 233);
+    border: 1px solid rgba(0, 0, 0, 0);
     border-radius: 10px;
     text-align: center;
     padding: 5px;
     margin: 5px;
+    text-transform: capitalize;
+    cursor: pointer;
+    
+    
     
     
     
@@ -104,7 +109,7 @@
 
 .bio {
     color: rgb(15, 0, 128);
-    background-color: rgb(119, 0, 255);
+    background-color: rgb(237, 230, 244);
     
 }
 
@@ -143,13 +148,15 @@
 
 
 .foot {
-    background-color: yellowgreen;
+    background-color: rgba(230, 227, 238, 0.396);
     text-align: center;
+    
 }
 
 .footer-desc{
     text-align: center;
-    color: white;
+    color: rgb(26, 77, 18);
+    border-bottom: solid 1px rgb(236, 15, 15);
 }
 
 
